--- a/.env.example
+++ b/.env.example
@@ -6,8 +6,8 @@ BASE=http://0.0.0.0:4000
 
 DB_HOST=127.0.0.1
 DB_PORT=27017
-DB_USER=admin
-DB_PASSWORD=myp@ssw0rd
+DB_USER=
+DB_PASSWORD=
 DB_NAME=xmeter
 DB_REPLICA=false
 
@@ -16,11 +16,11 @@ REDIS_PORT=6379
 REDIS_DB=1
 REDIS_PASSWORD=
 
-HAR_GENERATOR=http://127.0.0.1:8000/
+HAR_GENERATOR=http://127.0.0.1:8080/
 
-CHROME_DRIVER=/Users/ashok/WebRoot/har-test/node_modules/.bin/chromedriver
-STORAGE_PATH=/Users/ashok/WebRoot/testingtool/app/uploads/
-TEMP_PATH=/Users/ashok/WebRoot/testingtool/app/temp/
+CHROME_DRIVER=/Users/atulsingh/WebRoot/testingtool/app/node_modules/chromedriver/lib/chromedriver/chromedriver
+STORAGE_PATH=/Users/atulsingh/WebRoot/testingtool/app/uploads/
+TEMP_PATH=/Users/atulsingh/WebRoot/testingtool/app/temp/
 
 MAIL_FROM=hello@impulsiveweb.com
 MAIL_HOST=smtp.mailgun.org
@@ -28,6 +28,4 @@ MAIL_PORT=587
 MAIL_USER=
 MAIL_PASSWORD=
 
-LOG_PATH=/Users/ashok/WebRoot/testingtool/app/logs/
-
-
+LOG_PATH=/Users/atulsingh/WebRoot/testingtool/logs/
