--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async-busboy": "^0.6.2",
     "aws-sdk": "^2.253.1",
     "babel-polyfill": "^6.5.0",
+    "cheerio": "^1.0.0-rc.2",
     "chromedriver": "^2.40.0",
     "dotenv": "^4.0.0",
     "edge.js": "^1.1.4",
