--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "edge.js": "^1.1.4",
     "es6-promisify": "^4.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "gulp": "^3.9.1",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.2.2",
     "koa": "^2.0.0-alpha.7",
@@ -64,16 +65,6 @@
     "eslint": "^3.12.2",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean-css": "^3.4.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
-    "gulp-image": "^4.3.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^1.5.4",
-    "gulp-watch": "^4.3.9",
     "nodemon": "^1.17.5"
   }
 }
