--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "^6.5.0",
     "cheerio": "^1.0.0-rc.2",
     "chromedriver": "^2.40.0",
+    "dateformat": "^3.0.3",
     "dotenv": "^4.0.0",
     "edge.js": "^1.1.4",
     "es6-promisify": "^4.1.0",
