--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "redis": "^2.8.0",
     "rimraf": "^2.6.2",
     "sharp": "^0.20.1",
+    "socket.io": "^2.2.0",
     "stats-percentile": "^3.1.0",
     "tld-extract": "^1.0.1",
     "videoshow": "^0.1.11"
