--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "mongoose-findorcreate": "^3.0.0",
     "mongoose-paginate": "^5.0.3",
     "mysql": "^2.17.1",
+    "node-cron": "^2.0.3",
     "nodemailer": "^4.4.1",
     "read-chunk": "^2.1.0",
     "redis": "^2.8.0",
