--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "mime-types": "^2.1.17",
     "moment": "^2.22.0",
     "mongoose": "^4.4.3",
+    "mongoose-autopopulate": "^0.9.1",
     "mongoose-findorcreate": "^3.0.0",
     "mongoose-paginate": "^5.0.3",
     "mysql": "^2.17.1",
